/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
import "nanopb.proto";

message EA_OutData_t_pb
{
	repeated uint32 ucTlmHeader = 1[(nanopb).max_count = 12];
	required uint32 uiCounter = 2;
}

message int32
{
	required int32 iParam = 1;
}

message EA_InData_t_pb
{
	repeated uint32 TlmHeader = 1[(nanopb).max_count = 12];
	required uint32 counter = 2;
}

message EA_ChildData_t_pb
{
	repeated string AppInterpreter = 1[(nanopb).max_count = 96];
	repeated uint32 ucTlmHeader = 2[(nanopb).max_count = 12];
	repeated string AppScript = 3[(nanopb).max_count = 96];
}

message EA_ProcData_t_pb
{
	required uint64 total_time = 1;
	required uint64 p_time = 2;
}

message CFE_EVS_BinFilter_t_pb
{
	required uint32 EventID = 1;
	required uint32 Mask = 2;
}

message EA_HkTlm_t_pb
{
	required float ActiveAppUtil = 1;
	required uint32 usCmdCnt = 2;
	repeated string LastAppRun = 3[(nanopb).max_count = 96];
	required int32 LastAppStatus = 4;
	repeated uint32 TlmHeader = 5[(nanopb).max_count = 12];
	required uint32 usCmdErrCnt = 6;
	repeated string ActiveApp = 7[(nanopb).max_count = 96];
	required int32 ActiveAppPID = 8;
}

message EA_AppData_t_pb
{ 
	required int32 CdsTbl = 1;
	repeated CFE_EVS_BinFilter_t_pb EventTbl = 2[(nanopb).max_count = 22];
	required EA_HkTlm_t_pb HkTlm = 3;
	required string CmdPipeId = 4[(nanopb).max_count = 0];
	required EA_InData_t_pb InData = 5;
	required uint32 ChildAppTaskID = 6;
	required uint32 CdsTblHdl = 7;
	required string SchPipeId = 8[(nanopb).max_count = 0];
	required EA_OutData_t_pb OutData = 9;
	required EA_ProcData_t_pb ProcData = 10;
	required string DataPipeId = 11[(nanopb).max_count = 0];
	required uint32 ConfigTblPtr = 12;
	required EA_ChildData_t_pb ChildData = 13;
	required int32 ConfigTblHdl = 14;
	required uint32 uiRunStatus = 15;
	required bool ChildAppTaskInUse = 16;
}