/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message PBLIB_RegData_t_pb
{

	required uint32 cmdCode = 1;
	required uint32 msgId = 2;
	required string msgName = 3;
}