/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message FM_ChildQueueEntry_t_pb
{

	required uint32 DirListOffset = 1;
	required uint32 GetSizeTimeMode = 2;
	required uint32 FileInfoState = 3;
	required string Target = 4;
	required uint32 FileInfoTime = 5;
	required uint32 FileInfoCRC = 6;
	required string Source2 = 7;
	required uint32 FileInfoSize = 8;
	required string Source1 = 9;
	required uint32 Mode = 10;
	required uint32 CommandCode = 11;
}